fixing spacing

--- a/public/style.css
+++ b/public/style.css
@@ -21,11 +21,13 @@ body, html{
 
 #fade {
     z-index: 3;
+    overflow: hidden;
 }
 
 #dark {
     z-index: 1;
     opacity: 0.9;
+    overflow: hidden;
 }
 
 .fade {
